# ali-graphics-846

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md
src/: lib.rs  main.rs
src/error/: file_error.rs  mod.rs
src/handlers/: aws_file_handler.rs  download_handler.rs  mod.rs
src/routes/: file.rs  mod.rs
src/types/: app_state.rs  download_query.rs  error_template.rs  mod.rs  type_file.rs
static/: meta.css
templates/: error.html  meta.html
