[package]
name = "s3_asset_distributor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
aws-config = { version = "1", features = ["rustls"] }
aws-sdk-s3 = { version = "1", features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
serde_json = "1.0.148"
askama = "0.15.1"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
hyper = { version = "1.8.1", features = ["full"] }
